Fix document-header-top-bar scrollbar eclipse

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -886,6 +886,7 @@
 				position: fixed;
 				z-index: 2;
 				display: flex;
+				width: calc(100% - 8px);
 
 				// Page Hierarchy
 					> div:nth-of-type(1) {
